--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -273,8 +273,8 @@ config MACH_INCREDIBLE
 	  Select this to support the Incredible device
 
 config MACH_INCREDIBLEC
-	depends on ARCH_QSD8X50
-	default n
+	depends on ARCH_QSD8X50 && MSM_FLASHLIGHT
+	default y
 	bool "IncredibleC"
 	help
 	  Select this to support the IncredibleC device
