--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -74,7 +74,7 @@ obj-$(CONFIG_MACH_INCREDIBLEC) += board-incrediblec-rfkill.o board-incrediblec-a
 obj-$(CONFIG_MACH_INCREDIBLEC) += board-incrediblec-wifi.o
 obj-$(CONFIG_MACH_INCREDIBLEC) += board-incrediblec-microp.o htc_bluetooth.o
 obj-$(CONFIG_MACH_INCREDIBLEC) += msm_vibrator.o htc_wifi_nvs.o
-obj-$(CONFIG_MACH_INCREDIBLEC) += proc_engineerid.o  htc_awb_cal.o
+obj-$(CONFIG_MACH_INCREDIBLEC) += proc_engineerid.o
 obj-$(CONFIG_MACH_SUPERSONIC) += board-supersonic.o board-supersonic-panel.o
 obj-$(CONFIG_MACH_SUPERSONIC) += board-supersonic-keypad.o board-supersonic-mmc.o
 obj-$(CONFIG_MACH_SUPERSONIC) += board-supersonic-rfkill.o board-supersonic-audio.o
@@ -84,7 +84,7 @@ obj-$(CONFIG_MACH_SUPERSONIC) += board-supersonic-microp.o
 obj-$(CONFIG_MACH_SUPERSONIC) += board-supersonic-tpa2018d1.o
 obj-$(CONFIG_MACH_SUPERSONIC) += board-supersonic-tpa6130.o
 obj-$(CONFIG_MACH_SUPERSONIC) += htc_wifi_nvs.o htc_bluetooth.o
-obj-$(CONFIG_HTC_BATTCHG) += htc_battery.o
+obj-$(CONFIG_HTC_BATTCHG) += htc_battery.o htc_awb_cal.o
 
 obj-$(CONFIG_MACH_BRAVO) += board-bravo.o board-bravo-panel.o
 obj-$(CONFIG_MACH_BRAVO) += board-bravo-keypad.o board-bravo-mmc.o
