Updated to fix qsd6 audio build error.

--- a/arch/arm/configs/invisiblek_incrediblec_defconfig
+++ b/arch/arm/configs/invisiblek_incrediblec_defconfig
@@ -333,7 +333,7 @@ CONFIG_MSM_CPU_FREQ_MIN=245760
 # CONFIG_MSM_HW3D is not set
 # CONFIG_HTC_ACOUSTIC is not set
 CONFIG_HTC_ACOUSTIC_QSD=y
-# CONFIG_MSM_QDSP6 is not set
+CONFIG_MSM_QDSP6=y
 CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_WIFI_MEM_PREALLOC is not set
 CONFIG_ARCH_MSM_FLASHLIGHT=y
