fixes, the Kconfig had to be reverted, didn't do what i thought it did

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -273,7 +273,7 @@ config MACH_INCREDIBLE
 	  Select this to support the Incredible device
 
 config MACH_INCREDIBLEC
-	depends on ARCH_QSD8X50 && MSM_FLASHLIGHT
+	depends on ARCH_QSD8X50
 	default y
 	bool "IncredibleC"
 	help
