--- a/arch/arm/configs/invisiblek_incrediblec_defconfig
+++ b/arch/arm/configs/invisiblek_incrediblec_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.10
-# Fri Jan  7 20:44:37 2011
+# Tue Jan 11 12:17:11 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -1477,7 +1477,7 @@ CONFIG_USB_GADGET_SELECTED=y
 # CONFIG_USB_GADGET_LANGWELL is not set
 CONFIG_USB_GADGET_MSM_72K=y
 CONFIG_USB_MSM_72K=y
-# CONFIG_USB_MSM_72K_HTC is not set
+CONFIG_USB_MSM_72K_HTC=y
 # CONFIG_USB_GADGET_DUMMY_HCD is not set
 CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_ZERO is not set
@@ -1503,6 +1503,9 @@ CONFIG_USB_ANDROID_RNDIS=y
 # CONFIG_USB_G_MULTI is not set
 # CONFIG_USB_G_HID is not set
 # CONFIG_USB_G_WEBCAM is not set
+# CONFIG_USB_ACCESSORY_DETECT is not set
+# CONFIG_DOCK_ACCESSORY_DETECT is not set
+# CONFIG_USB_BYPASS_VBUS_NOTIFY is not set
 
 #
 # OTG and related infrastructure
