--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -73,7 +73,7 @@ obj-$(CONFIG_MACH_INCREDIBLEC) += board-incrediblec-keypad.o board-incrediblec-m
 obj-$(CONFIG_MACH_INCREDIBLEC) += board-incrediblec-rfkill.o board-incrediblec-audio.o
 obj-$(CONFIG_MACH_INCREDIBLEC) += board-incrediblec-wifi.o
 obj-$(CONFIG_MACH_INCREDIBLEC) += board-incrediblec-microp.o htc_bluetooth.o
-obj-$(CONFIG_MACH_INCREDIBLEC) += msm_vibrator.o htc_wifi_nvs.o
+obj-$(CONFIG_MACH_INCREDIBLEC) += msm_vibrator.o htc_wifi_nvs.o devices-qsd8x50.o
 obj-$(CONFIG_MACH_INCREDIBLEC) += proc_engineerid.o board-incrediblec-tpa6130.o
 obj-$(CONFIG_MACH_SUPERSONIC) += board-supersonic.o board-supersonic-panel.o
 obj-$(CONFIG_MACH_SUPERSONIC) += board-supersonic-keypad.o board-supersonic-mmc.o
