--- a/arch/arm/configs/invisiblek_incrediblec_defconfig
+++ b/arch/arm/configs/invisiblek_incrediblec_defconfig
@@ -1372,7 +1372,7 @@ CONFIG_720P_CAMERA=y
 # CONFIG_S5K3E2FX is not set
 # CONFIG_S5K4E1GX is not set
 # CONFIG_S5K6AAFX is not set
-CONFIG_OV8810=y
+# CONFIG_OV8810 is not set
 # CONFIG_OV9665 is not set
 # CONFIG_S5K3H1GX is not set
 # CONFIG_DAB is not set
@@ -1760,7 +1760,7 @@ CONFIG_YAFFS_YAFFS1=y
 # CONFIG_YAFFS_DOES_ECC is not set
 CONFIG_YAFFS_YAFFS2=y
 CONFIG_YAFFS_AUTO_YAFFS2=y
-# CONFIG_YAFFS_DISABLE_TAGS_ECC is not set
+CONFIG_YAFFS_DISABLE_TAGS_ECC=y
 # CONFIG_YAFFS_DISABLE_WIDE_TNODES is not set
 # CONFIG_YAFFS_ALWAYS_CHECK_CHUNK_ERASED is not set
 CONFIG_YAFFS_SHORT_NAMES_IN_RAM=y
