--- a/arch/arm/configs/invisiblek_incrediblec_defconfig
+++ b/arch/arm/configs/invisiblek_incrediblec_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.10
-# Tue Jan 11 12:17:11 2011
+# Sun Jan 16 20:34:38 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -1128,7 +1128,7 @@ CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_PCF8574 is not set
 # CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
-# CONFIG_INPUT_CAPELLA_CM3602 is not set
+CONFIG_INPUT_CAPELLA_CM3602=y
 # CONFIG_INPUT_CAPELLA_CM3602_HTC is not set
 CONFIG_LIGHTSENSOR_MICROP=y
 CONFIG_INPUT_OPTICALJOYSTICK=y
@@ -1372,7 +1372,7 @@ CONFIG_720P_CAMERA=y
 # CONFIG_S5K3E2FX is not set
 # CONFIG_S5K4E1GX is not set
 # CONFIG_S5K6AAFX is not set
-# CONFIG_OV8810 is not set
+CONFIG_OV8810=y
 # CONFIG_OV9665 is not set
 # CONFIG_S5K3H1GX is not set
 # CONFIG_DAB is not set
