--- a/arch/arm/configs/invisiblek_incrediblec_defconfig
+++ b/arch/arm/configs/invisiblek_incrediblec_defconfig
@@ -1031,6 +1031,7 @@ CONFIG_WLAN=y
 CONFIG_BCM4329=m
 CONFIG_BCM4329_FW_PATH="/system/etc/firmware/fw_bcm4329.bin"
 CONFIG_BCM4329_NVRAM_PATH="/proc/calibration"
+CONFIG_BCM4329_ENABLE_CSCAN=y
 # CONFIG_HOSTAP is not set
 # CONFIG_TIWLAN1251 is not set
 
