add smartass and havs (for real) re-enable ondemand

--- a/arch/arm/configs/invisiblek_incrediblec_defconfig
+++ b/arch/arm/configs/invisiblek_incrediblec_defconfig
@@ -1,8 +1,7 @@
-
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.10
-# Mon Jan 24 20:49:01 2011
+# Thu Jan 27 21:52:23 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -297,6 +296,8 @@ CONFIG_HTC_BATTCHG_SMEM=y
 # CONFIG_HTC_PWRSINK is not set
 # CONFIG_HTC_POWER_COLLAPSE_MAGIC is not set
 CONFIG_HTC_ONMODE_CHARGING=y
+CONFIG_QSD_SVS=y
+CONFIG_QSD_PMIC_DEFAULT_DCDC1=1275
 CONFIG_CACHE_FLUSH_RANGE_LIMIT=0x40000
 CONFIG_MSM7X00A_USE_GP_TIMER=y
 # CONFIG_MSM7X00A_USE_DG_TIMER is not set
@@ -331,6 +332,7 @@ CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=998000
 CONFIG_MSM_CPU_FREQ_MIN=245760
 # CONFIG_AXI_SCREEN_POLICY is not set
+CONFIG_MSM_CPU_AVS=y
 # CONFIG_MSM_HW3D is not set
 # CONFIG_HTC_ACOUSTIC is not set
 CONFIG_HTC_ACOUSTIC_QSD=y
@@ -448,14 +450,16 @@ CONFIG_CPU_FREQ_STAT_DETAILS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTASS=y
 # CONFIG_CPU_IDLE is not set
 CONFIG_CPU_FREQ_MSM=y
 
@@ -800,7 +804,6 @@ CONFIG_BT_BNEP=y
 # CONFIG_BT_BNEP_MC_FILTER is not set
 # CONFIG_BT_BNEP_PROTO_FILTER is not set
 CONFIG_BT_HIDP=y
-
 
 #
 # Bluetooth device drivers
